# daily-cli

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: workflow.yml
daily/: __init__.py  cli.py  config.py  core.py  markdown.py
tests/: test_cli.py  test_config.py  test_core.py  test_integration.py  test_markdown.py
